--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "ngx-spinner": "^10.0.1",
+    "number-words": "^1.1.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
