--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "~10.1.4",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "ngx-spinner": "^10.0.1",
     "number-words": "^1.1.1",
     "path": "^0.12.7",
