--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "export-from-json": "^1.3.4",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ngx-csv": "^0.3.2",
     "ngx-spinner": "^10.0.1",
     "number-words": "^1.1.1",
     "path": "^0.12.7",
