--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "angular-ng-autocomplete": "^2.0.1",
     "export-from-json": "^1.3.4",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
