--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-print": "^1.2.0-beta.5",
     "ngx-spinner": "^10.0.1",
     "number-words": "^1.1.1",
+    "paper-css": "^0.1.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
